--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "hzw",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^12.11.7",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.7.6"
+    "mongoose": "^5.7.6",
+    "typescript": "^3.6.4"
   }
 }
